1848.11

*** This can break archived templates on iOS, regenerate them ***

* mulle-scion has now a -z option to output compiled templates. While testing
I found out, that when I use NSKeyedArchiver it's actually slower than parsing
plain text and uses more space even compressed.

Compile plaintext * 100
-rw-r--r--  1 nat  _lpoperator  198016 Oct  9 17:00 big.scion

real	0m8.528s

Compile unkeyed * 100
-rw-r--r--  1 nat  wheel  75983 Oct  9 17:25 /tmp/unkeyed.scionz
real	0m8.680s

Compile keyed * 100
-rw-r--r--  1 nat  wheel  750347 Oct  9 17:25 /tmp/keyed.scionz
real	0m25.497s

If you are on iOS it's most likely better to not use archives and caching!


1848.10

*** This can break currently working templates, that contain unnoticed 
    syntax errors! ***

* the parser doesn't allow garbage inside mulle-scion tags anymore. It
  used to parse {{ x = #<%$/&> }} because everything after "x " was
  ignored, but it was just too confusing in real life use.
 
* simplified expansion of function functionality a bit. 
  added NSStringFromRange to builtin-functions

* added some NSURL methods for opening templates, which is more convenient on
iOS

* made built-in function in principle expandable to support user-written
functions


1848.9

* added a podspec


1848.8

* allow # comments within {% %}

* added log command for debugging

* mulle-scion now builds into /usr/local/bin in Release setting

* the demo webserver root is now /tmp/MulleScionDox

* fixed requires dox

* made requires a single line command, like include or extends, just because
it "felt right"

* remove some extraneous debug output and runtime warnings

* new scheme "Show Documentation in Browser"

* updated documentation a bit regarding multi-line commands


v1848.7

* outsourced NSObject+MulleGraphviz because I need it in other code
too and the dependency on MulleScion was annoying.

* fixed some bad code in commandline tool, that reads the property list


v1848.6
